--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -45,13 +45,13 @@ Chapel Hill\\
 \vfill
 \begin{flushright}
 \begin{minipage}[t]{1.5in} \large
-%Approved by:\\
-To be approved by: \\
+Approved by:\\
 Martin Styner \\
 Junier Oliva \\
-Guorong Wu \\
+Heather Hazlett \\
 Danielle Szafir \\
-Heather Hazlett
+Guorong Wu
+
 \end{minipage}
 \end{flushright}
 
