all caps titlepage.tex

--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -6,7 +6,8 @@
 \vspace{2in}
 \begin{singlespace}
 \bf
-Anomaly Detection via Score Matching
+% Anomaly Detection via Score Matching
+ANOMALY DETECTION VIA SCORE MATCHING
 \end{singlespace}
 
 
