--- a/ch5-spatial.tex
+++ b/ch5-spatial.tex
@@ -18,7 +18,7 @@ Another industry where anomaly detection has critical real-world value, is manuf
 
 This chapter will introduce Spatial-MSMA: an extended version of MSMA with localization capabilities. Note that the benefits of localization are twofold. First, it allows the possibility of pinpointing physical anomalies. For example, Spatial-MSMA is capable of highlighting brain lesions even though it was never trained with labeled data. Second, localization enables exploratory insights, gained through the interpretation of heatmaps.
 % The two benefits are orthogonal with respect to one another and significantly expand the use-case for MSMA.
-When taken together, these benefits significantly expand the use-case for MSMA.
+When taken together, these benefits significantly expand the use-case for MSMA. Related code is available at~\url{https://github.com/ahsanMah/sade/}
 
 
 \section{Existing Techniques for Anomaly Localization}
