--- a/ch6-ds.tex
+++ b/ch6-ds.tex
@@ -235,18 +235,18 @@ A total of 35 behavior scores and 40 ROIs were tested, resulting in 1400 correla
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=\textwidth]{figures/rankcorrplot-fig1.pdf}
+\includegraphics[width=\textwidth, height=1.25\linewidth]{figures/rankcorrplot-fig1.pdf}
 \caption{Spearman-rank correlations ($\text{corrected-}p < 0.1$) between ROIs belonging to prototypical Down Syndrome samples and behavioral scores.
 First column shows raw scores (percentiles for behavior scores and negative log-likelihoods for anomaly scores), while second column shows ranks. Note that all \textit{percentiles} in the range 0-100. All p-values were corrected for FDR.}
 \label{fig:roi-scatter}
 \end{figure}
 
-\begin{figure}[h!]
-\centering
-\includegraphics[width=0.93\textwidth, height=1.46\textwidth]{figures/rankcorrplot-fig2.pdf}
-\caption{Continuation of correlations from~\figref{fig:roi-scatter}}
-\label{fig:roi-scatter-cont}
-\end{figure}
+% \begin{figure}[h!]
+% \centering
+% \includegraphics[width=0.93\textwidth, height=1.46\textwidth]{figures/rankcorrplot-fig2.pdf}
+% \caption{Continuation of correlations from~\figref{fig:roi-scatter}}
+% \label{fig:roi-scatter-cont}
+% \end{figure}
 
 
 \begin{figure}[ht]
@@ -266,12 +266,12 @@ First column shows raw scores (percentiles for behavior scores and negative log-
 \label{fig:full-roi-corr}
 \end{figure}
 
-\begin{figure}[tbhp]
-\centering
-\includegraphics[width=\linewidth]{figures/pmatrix.pdf}
-\caption{Heatmap of raw p-values for Behavioral-ROI correlations. Only showing $p < 0.1$.}
-\label{fig:full-roi-corr}
-\end{figure}
+% \begin{figure}[tbhp]
+% \centering
+% \includegraphics[width=\textwidth]{figures/pmatrix.pdf}
+% \caption{Heatmap of raw p-values for Behavioral-ROI correlations. Only showing $p < 0.1$.}
+% \label{fig:full-roi-pvals}
+% \end{figure}
 
 \section{Conclusion}
 
