--- a/common/preamble.tex
+++ b/common/preamble.tex
@@ -7,6 +7,10 @@
 \usepackage{tocloft}
 \usepackage[hang,flushmargin]{footmisc}
 
+%%%%%%%
+\usepackage[toc]{appendix}
+%%%%%%%%%
+
 % Citation style
 % \usepackage{harvard}
 \usepackage[square]{natbib}
@@ -42,6 +46,7 @@
 \usepackage{times}
 \usepackage{microtype}
 \usepackage{textcomp}
+\usepackage{indentfirst}
 
 % Macro support
 \usepackage{xspace}
