--- a/common/layout.tex
+++ b/common/layout.tex
@@ -1,5 +1,5 @@
 % Use proper margins.
-\geometry{letterpaper,left=1.25in,top=1in,right=1.25in,bottom=1in,nohead}
+\geometry{letterpaper,left=1in,top=1in,right=1in,bottom=1in,nohead}
 
 
 
@@ -9,8 +9,10 @@
 % Center chapter titles
 % Place chapter title, number, and name on same line
 % Make chapter headings all uppercase, standard font size
-% Omit page numbers
-\titleformat{\chapter}[hang]{\normalfont\fillast\bfseries}{\MakeUppercase{\chaptertitlename} \thechapter: }{0em}{\MakeUppercase}[\thispagestyle{empty}]
+% Keep page numbers
+\titleformat{\chapter}[hang]{\normalfont\fillast\bfseries}{\MakeUppercase{\chaptertitlename} \thechapter: }{0em}
+{\MakeUppercase}
+% [\thispagestyle{empty}]
 
 % Make section headings normal font size, bold
 \titleformat*{\section}{\normalfont\bfseries}
