--- a/frontmatter/titlepage-orig.tex
+++ b/frontmatter/titlepage-orig.tex
@@ -12,7 +12,7 @@ ANOMALY DETECTION VIA SCORE MATCHING
 
 
 % 2. Your name, centered below the title.
-\vspace{72pt} % 1 in = 72pt, 11pt for the line with text
+\vspace{61pt} % 1 in = 72pt, 11pt for the line with text
 \large Ahsan Mahmood
 \end{center}
 
@@ -20,21 +20,19 @@ ANOMALY DETECTION VIA SCORE MATCHING
 %3. The following statement, within the full margins below your name:
 %A dissertation [or thesis] submitted to the faculty of the University of North Carolina at Chapel Hill in partial fulfillment of the requirements for the degree of	in the Department [or School or Curriculum]
 
-\vspace{72pt}
+\vspace{50pt}
 \begin{singlespace}
 \noindent \large
-\begin{center}
 A dissertation submitted to the faculty of the University of North Carolina at Chapel Hill
 in partial fulfillment of the requirements for the degree of Doctor of Philosophy in
 the Department of Computer Science.
-\end{center}
 \end{singlespace}
 
 
 %4. On the lower half of the page, centered, the words Chapel Hill
 %and one line below that, the year in which your committee approves
 %the completed thesis/dissertation.
-\vspace{72pt}
+\vspace{50pt}
 \begin{center}
 \begin{singlespace} \large
 Chapel Hill\\
@@ -45,7 +43,7 @@ Chapel Hill\\
 %5. On the right-hand side of the page, followed by lines for the
 %signatures of the adviser and four (two for thesis) readers. List
 
-\vspace{72pt}
+\vfill
 \begin{flushright}
 \begin{minipage}[t]{1.5in} \large
 Approved by:\\
